force-app/main/default/objects/MonthlyPayment__c/MonthlyPayment__c.object-meta.xml
<CustomObject>
    <label>Monthly Payment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Monthly Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>