force-app/main/default/objects/MonthlyPayment__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <formula>IF(   ISBLANK( OpportunityLineItem__c ) ,  TEXT(OrderItem__r.Access_Type__c) ,  TEXT(OpportunityLineItem__r.Access_Type__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Type</label>
    <type>Text</type>
</CustomField>