force-app/main/default/objects/MonthlyPayment__c/fields/Calculated_Price_Adjutment__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Price_Adjutment__c</fullName>
    <formula>Monthly_Units__c *  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Price Adjutment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>