force-app/main/default/objects/MonthlyPayment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Monthly Payments</relationshipLabel>
    <relationshipName>Monthly_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>