force-app/main/default/objects/MonthlyPayment__c/fields/Count_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Count_Triggers__c</fullName>
    <label>Count Triggers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>