force-app/main/default/objects/MonthlyPayment__c/fields/DateText__c.field-meta.xml
<CustomField>
    <fullName>DateText__c</fullName>
    <formula>CASE(
    MONTH(Start_date__c),
    1, &quot;January&quot;,
    2, &quot;February&quot;,
    3, &quot;March&quot;,
    4, &quot;April&quot;,
    5, &quot;May&quot;,
    6, &quot;June&quot;,
    7, &quot;July&quot;,
    8, &quot;August&quot;,
    9, &quot;September&quot;,
    10, &quot;October&quot;,
    11, &quot;November&quot;,
    12, &quot;December&quot;,
    &quot;Invalid Month&quot;
) &amp; &quot; &quot; &amp; TEXT(YEAR(Start_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Month</label>
    <type>Text</type>
</CustomField>