force-app/main/default/objects/MonthlyPayment__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <formula>End_Date_trigger__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End date</label>
    <type>Date</type>
</CustomField>