force-app/main/default/objects/MonthlyPayment__c/fields/End_Date_trigger__c.field-meta.xml
<CustomField>
    <fullName>End_Date_trigger__c</fullName>
    <label>End Date trigger</label>
    <type>Date</type>
</CustomField>