force-app/main/default/objects/MonthlyPayment__c/fields/Final_Adjusted_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Adjusted_Price__c</fullName>
    <description>Stored monthly money for non-Usage Based lines. Amount edits write the exact typed value. Recalculated when Discount or related price inputs change unless Amount explicitly set this value in the same save.</description>
    <label>Final Adjusted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>