force-app/main/default/objects/MonthlyPayment__c/fields/FinalPrice__c.field-meta.xml
<CustomField>
    <fullName>FinalPrice__c</fullName>
    <formula>IF(
  Access_Type__c = &quot;Usage Based&quot;,
  IF(ISBLANK(ListPrice__c), 0, ListPrice__c),
  IF(
    OR(ISBLANK(Final_Adjusted_Price__c), Final_Adjusted_Price__c = 0),
    Price__c * (1 + Discount__c),
    Final_Adjusted_Price__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claculated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>