force-app/main/default/objects/MonthlyPayment__c/fields/List_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Adjustment__c</fullName>
    <formula>((FinalPrice__c / (
IF(
ISBLANK(OpportunityLineItem__c),
OrderItem__r.PricebookEntry.UnitPrice* Monthly_Units__c,
OpportunityLineItem__r.PricebookEntry.UnitPrice* Monthly_Units__c
)
)) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Adjustment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>