force-app/main/default/objects/MonthlyPayment__c/fields/MonthIndex__c.field-meta.xml
<CustomField>
    <fullName>MonthIndex__c</fullName>
    <label>Month Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>