force-app/main/default/objects/MonthlyPayment__c/fields/Monthly_Units__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Units__c</fullName>
    <formula>IF(
  OR(Access_Type__c = &quot;Periodic&quot;, Access_Type__c = &quot;Monthly&quot;, Access_Type__c = &quot;Rent&quot;),
  (DAY(End_date__c) - DAY(Start_date__c) + 1) / 
  DAY(
    DATE(
      YEAR(Start_date__c) + IF(MONTH(Start_date__c) = 12, 1, 0), 
      IF(MONTH(Start_date__c) = 12, 1, MONTH(Start_date__c) + 1), 
      1
    ) - 1
  ),
  1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Units</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>