force-app/main/default/objects/MonthlyPayment__c/fields/Opportunity_Parent__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Parent__c</fullName>
    <formula>CASE(
    OpportunityLineItem__r.Access_Type__c,
    &apos;Monthly&apos;, 1,
    &apos;Periodic&apos;, 1,
    0
) = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Parent</label>
    <type>Checkbox</type>
</CustomField>