force-app/main/default/objects/MonthlyPayment__c/fields/OpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Monthly Payments</relationshipLabel>
    <relationshipName>Monthly_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>