force-app/main/default/objects/MonthlyPayment__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderItem</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Monthly Payments</relationshipLabel>
    <relationshipName>Monthly_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>