force-app/main/default/objects/MonthlyPayment__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>IF( ISBLANK(OrderItem__c),  OpportunityLineItem__r.TotalPrice *  Monthly_Units__c,  OrderItem__r.UnitPrice * OrderItem__r.Quantity * Monthly_Units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>