force-app/main/default/objects/MonthlyPayment__c/fields/Products_Name__c.field-meta.xml
<CustomField>
    <fullName>Products_Name__c</fullName>
    <formula>IF( ISBLANK(OrderItem__c)  , OpportunityLineItem__r.PricebookEntry.Product2.Name,  OrderItem__r.PricebookEntry.Product2.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products Name</label>
    <type>Text</type>
</CustomField>