force-app/main/default/objects/MonthlyPayment__c/fields/Segmentation_Copy__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Copy__c</fullName>
    <label>Segmentation_Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>