force-app/main/default/objects/MonthlyPayment__c/fields/Standard_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Standard_Monthly_Income__c</fullName>
    <formula>IF(   OrderItem__r.Product_Type_Name__c   = &apos;Standard Products&apos;,  FinalPrice__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>