force-app/main/default/objects/MonthlyPayment__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <formula>Stat_Date_Trigger__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start date</label>
    <type>Date</type>
</CustomField>