force-app/main/default/objects/MonthlyPayment__c/fields/Stat_Date_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Stat_Date_Trigger__c</fullName>
    <label>Stat Date Trigger</label>
    <type>Date</type>
</CustomField>