force-app/main/default/objects/MonthlyPayment__c/fields/User_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>User_Price_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>User Price Adjustment (%)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>